<resources>
    <string name="app_name">Wstunnela</string>
    <string name="wstunnel_vesion">Version:</string>
    <string name="system_architecture">System_Arch:</string>
    <string name="loaded">Is Active:</string>
    <string name="buttonstart">start</string>
    <string name="buttonstop">stop</string>
    <string name="nosupportremind">Your device isn\'t supported</string>
    <string name="exam_cmd">wstunnel  client -L "udp://23456:localhost:23456?timeout_sec=0" wss://exam.com:443</string>
    <string name="errormessage">Nothing happended</string>
    <string name="Notificationtitle">Wstunnela</string>
    <string name="Notificationcontent">Wstunnel is Running</string>
    <string name="illlegalwstunnelcmd">An error was detected in the startup command</string>

    <string name="servicename">com.feng.wstunnela.MyService</string>
    <string name="wsarm64">wstunnel_arm64</string>
    <string name="wsamd64">wstunnel_amd64</string>
    <string name="binfilepath">/data/data/com.feng.wstunnela/wstunnel</string>

    <string name="arch_text">arm64/amd64</string>
    <string name="version_text">x.x.x</string>
    <string name="download_remind">downloading wstunnel from github…</string>

    <string name="edit_hint_text">WStunnel Rule Name</string>
    <string name="wstunnel_client_temp">wstunnel client -L udp://51820:localhost:51820?timeout_sec=0 wss://exam.com:18080</string>>
    <string name="wstunnel_client_temp_s">client temp</string>>
    <string name="wstunnel_server_temp">wstunnel server --restrict-to localhost:51820 wss://0.0.0.0:18080</string>>
    <string name="wstunnel_server_temp_s">server temp</string>>

    <string name="tab_main">main</string>>
    <string name="tab_config">config</string>>
    <string name="tab_log">log</string>>

    <string name="fab_play">launch</string>>
    <string name="fab_stop">stop</string>>

    <string name="exit_remind">Wstunnel service will have been running in the background</string>>

    <string name="cancel_button">Cancel</string>>
    <string name="battery_permission_title">Background execution permission</string>>
    <string name="battery_permission_content">To ensure the service runs properly, please disable battery optimization and allow background execution.</string>>
    <string name="background_running_set">To Setting</string>>
    <string name="ignore_battery_optimization">Allowed Ignoring Battery Optimization</string>
    <string name="not_save_power_mode">Stop Save Power Mode</string>
    <string name="android_backgroundRestricted">Unlimited by Android 8+ BackgroundRestricted</string>
    <string name="setting_is_ok">Finish Setting</string>

    <string name="button_backgroundrunning">How To Keep Services Running In the BackGround</string>
</resources>